# UiPath-MCP-Server

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
src/uipath_mcp/: __init__.py  auth.py  client.py  config.py  models.py  resources.py  server.py
src/uipath_mcp/tools/: __init__.py  analytics.py  assets.py  audit.py  folders.py  jobs.py  packages.py  queues.py  robots.py  schedules.py  webhooks.py
tests/: conftest.py  test_auth.py  test_client.py
tests/test_tools/: test_jobs.py  test_packages.py  test_queues.py
