[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uipath-orchestrator-mcp"
version = "1.1.0"
description = "Python MCP server for UiPath Orchestrator — 53 tools, async, typed, production-ready"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "uipath", "orchestrator", "ai", "rpa", "automation", "claude", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Framework :: AsyncIO",
]

dependencies = [
    "mcp[cli]>=1.9.0",
    "httpx[http2]>=0.28.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.7.0",
    "tenacity>=9.0.0",
    "loguru>=0.7.3",
    "rich>=13.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.21.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
uipath-mcp = "uipath_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/uipath_mcp"]

# ---- Ruff (linter + formatter) ----
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["uipath_mcp"]

# ---- Mypy ----
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

# ---- pytest ----
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"
